--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -269,7 +269,7 @@ logging:
     org.hibernate.SQL: ${LOG_LEVEL:INFO}
     org.hibernate.type.descriptor.sql.BasicBinder: ${LOG_LEVEL:INFO}
   pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} [%X{X-Correlation-ID}] - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} [%X{X-Correlation-ID}] - %msg%n"
   file:
     name: logs/user-service.log
