feat(gateway): add Fiber & Notification service routes + resilience config
✅ API Gateway (93%):
- Add Fiber Service routes (/api/v1/fiber/**)
- Add Notification Service routes (/api/v1/notifications/**)
- Add fallback endpoints for new services
- Update docker-compose.yml service names
- All 5 services now routed through Gateway

📊 Route Coverage: 5/5 services (100%)
- user-service ✅
- company-service ✅
- contact-service ✅
- fiber-service ✅ NEW
- notification-service ✅ NEW

🎯 Resilience:
- Circuit Breaker: ✅
- Retry Policy: ✅
- Rate Limiting: ✅
- Fallbacks: ✅

Refs: docs/architecture/communication/API_GATEWAY_COMMUNICATION_CHECKLIST.md

--- a/services/api-gateway/src/main/resources/application-docker.yml
+++ b/services/api-gateway/src/main/resources/application-docker.yml
@@ -74,6 +74,10 @@ resilience4j:
         baseConfig: default
       contactServiceCircuitBreaker:
         baseConfig: default
+      fiberServiceCircuitBreaker:
+        baseConfig: default
+      notificationServiceCircuitBreaker:
+        baseConfig: default
 
   retry:
     configs:
