--- a/services/fiber-service/src/main/resources/application.yml
+++ b/services/fiber-service/src/main/resources/application.yml
@@ -125,7 +125,7 @@ jwt:
 # =============================================================================
 app:
   kafka:
-    topic:
+    topics:
       fiber-events: ${KAFKA_TOPIC_FIBER_EVENTS:fiber-events}
 
 # =============================================================================
