--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -35,12 +35,14 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
   flyway:
-    enabled: false # Geçici - Migration dosyaları oluşturduktan sonra true yapacağız
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
 
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create # Geçici - Tabloları otomatik oluşturur
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
